Wed Apr 12 15:50:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* add_document methods now all return a om_docid value (rather than
	  void)

Wed Apr 12 15:49:17 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* MultiMatch now takes an optional StatsGatherer argument to
	  its constructor.

Wed Apr 12 14:03:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* IRDatabase now inherits from OmRefCntBase: we have multiple
	  inheritance!  This means that we can now have refernce counted
	  access to databases from the API.

	* OmWritableDatabase is now implemented in the API, opens the
	  database, and is well defined.  add_document() is the only method
	  not yet implemented, and simply throws an exception.

	* simpleindex example now compiles, links, runs, and reports an
	  exception.

Wed Apr 12 13:22:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Sorted out the mutex situation with Om/LeafDocument.

Tue Apr 11 22:01:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Renamed DocumentContents and DocumentTerm to OmDocumentContents and 
	  OmDocumentTerm, and added these classes to the API.  Moved these
	  from "common/document_contents.h" to "include/om/omindexdoc.h"

	* Added a OmWritableDatabase class to the API.  Implemented some of
	  the needed methods.

Tue Apr 11 21:14:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* SleepyDatabase now knows how to allocate a new term ID for a new
	  term, and does some of the needed actions to add a new document to
	  the database.

Tue Apr 11 19:18:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Backwards incompatible API CHANGE:
	  OmDatabase renamed to OmDatabaseGroup, since this is what it is,
	  and better to change it sooner than later.
	  No work other than renaming the class should be neccessary to fix
	  old code.

Tue Apr 11 18:05:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
