@@ -26,3 +26,8 @@ libomus_la_LIBADD = \
  net/libnet.la
 
 bin_SCRIPTS = libomus-config
+
+libomus-config: libomus-config.nodep libomus.la
+	export dependency_libs; \
+	. libomus.la ; \
+	cat $< | sed "s%@dependency_libs@%$${dependency_libs}%" > $@
