@@ -1,3 +1,8 @@
+Wed Apr 12 16:22:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* libomus-config now gives flags required to link with dependent
+	  libraries (as determined by libtool).
+
 Wed Apr 12 15:50:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* add_document methods now all return a om_docid value (rather than
